# robocomm

./: LICENSE  README.md  pyproject.toml
robocomm/: __init__.py  robotInferenceService.py
robocomm/serialization/: serialization.py  types.py
robocomm/service/: __init__.py  logger.py  service.py
